<resources>
    <string name="app_name">CS3270A8 Jaren Montano</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="newcourstitle">New Course</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="course_code">Course Code</string>
    <string name="start_at">Start At</string>
    <string name="end_at">End At</string>
    <string name="enter_a_course">Enter a Course!</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="course_name">Course Name</string>
</resources>